Add ExcludeFromOverride for a lot of functions

--- a/src/Windowing/Silk.NET.SDL/Silk.NET.SDL.csproj
+++ b/src/Windowing/Silk.NET.SDL/Silk.NET.SDL.csproj
@@ -6,6 +6,14 @@
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net5.0|AnyCPU'">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net5.0|AnyCPU'">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Ultz.Native.SDL" Version="2.*" />
   </ItemGroup>
