--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "build/submodules/webgpu-headers"]
 	path = build/submodules/webgpu-headers
 	url = https://github.com/webgpu-native/webgpu-headers/
+[submodule "build/submodules/wgpu-native"]
+	path = build/submodules/wgpu-native
+	url = https://github.com/gfx-rs/wgpu-native
