--- a/src/Lab/Experiments/WebGPUTest/WebGPUTest.csproj
+++ b/src/Lab/Experiments/WebGPUTest/WebGPUTest.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\WebGPU\Extensions\Silk.NET.WebGPU.Extensions.WGPU\Silk.NET.WebGPU.Extensions.WGPU.csproj" />
       <ProjectReference Include="..\..\..\WebGPU\Silk.NET.WebGPU\Silk.NET.WebGPU.csproj" />
       <ProjectReference Include="..\..\..\Windowing\Extensions\Silk.NET.Windowing.Extensions\Silk.NET.Windowing.Extensions.csproj" />
       <ProjectReference Include="..\..\..\Windowing\Silk.NET.GLFW\Silk.NET.GLFW.csproj" />
