WebGPUTexturedQuad: Move shader to separate file

--- a/examples/CSharp/WebGPU/WebGPUTexturedQuad/WebGPUTexturedQuad.csproj
+++ b/examples/CSharp/WebGPU/WebGPUTexturedQuad/WebGPUTexturedQuad.csproj
@@ -22,6 +22,9 @@
       <None Include="silk.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="shader.wgsl">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
