WebGPUTexturedQuad: 2d projection matrix to keep the quad the same size always

--- a/examples/CSharp/WebGPU/WebGPUTexturedQuad/WebGPUTexturedQuad.csproj
+++ b/examples/CSharp/WebGPU/WebGPUTexturedQuad/WebGPUTexturedQuad.csproj
@@ -23,7 +23,7 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
       <None Update="shader.wgsl">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
 
