--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -20,6 +20,9 @@
 # OpenGL
 /src/OpenGL/**/*.cs                 @ThomasMiz @Beyley
 
+# WebGPU
+/src/WebGPU/**/*.cs                 @Beyley
+
 # BuildTools
 #/src/Core/Silk.NET.BuildTools       @Perksey
 #/**/*.gen.cs                        @Perksey
