--- a/examples/CSharp/OpenGL Tutorials/Tutorial 4.1 - Model Loading/Tutorial 4.1 - Model Loading.csproj
+++ b/examples/CSharp/OpenGL Tutorials/Tutorial 4.1 - Model Loading/Tutorial 4.1 - Model Loading.csproj
@@ -9,10 +9,10 @@
 
     <ItemGroup>
         <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
+        <PackageReference Include="Silk.NET.Assimp" Version="*" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\..\src\Assimp\Silk.NET.Assimp\Silk.NET.Assimp.csproj" />
         <ProjectReference Include="..\..\..\..\src\Input\Silk.NET.Input\Silk.NET.Input.csproj" />
         <ProjectReference Include="..\..\..\..\src\OpenGL\Silk.NET.OpenGL\Silk.NET.OpenGL.csproj" />
         <ProjectReference Include="..\..\..\..\src\Windowing\Silk.NET.Windowing\Silk.NET.Windowing.csproj" />
