Added Missing DirectComposition Redirects
regenerated bindings

--- a/src/Microsoft/Silk.NET.DirectComposition/Silk.NET.DirectComposition.csproj
+++ b/src/Microsoft/Silk.NET.DirectComposition/Silk.NET.DirectComposition.csproj
@@ -9,6 +9,7 @@
   <Import Project="..\..\..\build\props\bindings.props" />
 
   <ItemGroup>
+    <ProjectReference Include="..\Silk.NET.Direct2D\Silk.NET.Direct2D.csproj" />
     <ProjectReference Include="..\Silk.NET.DXGI\Silk.NET.DXGI.csproj" />
   </ItemGroup>
 </Project>
