--- a/.github/workflows/glfw.yml
+++ b/.github/workflows/glfw.yml
@@ -7,6 +7,7 @@ on:
       - "main"
     paths:
       - "build/submodules/GLFW"
+      - "build/nuke/Build.Native.cs"
 jobs:
   Build:
     strategy: 
