--- a/src/Windowing/Silk.NET.Windowing/Silk.NET.Windowing.csproj
+++ b/src/Windowing/Silk.NET.Windowing/Silk.NET.Windowing.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0;net6.0;net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
         <SilkMetapackage>true</SilkMetapackage>
     </PropertyGroup>
 
