--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "build/submodules/dawn"]
 	path = build/submodules/dawn
 	url = https://github.com/Beyley/dawn
+[submodule "build/submodules/dxvk"]
+	path = build/submodules/dxvk
+	url = https://github.com/doitsujin/dxvk/
