--- a/.github/workflows/dxvk.yml
+++ b/.github/workflows/dxvk.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           dotnet-version: 6.0.201
       - name: Build DXVK
-        uses: beyley/arch-mingw-github-action@v13
+        uses: Joshua-Ashton/arch-mingw-github-action@12cb3126180924c3be54025b08f42e4e14da080b
         with:
           command: |
             ${{ matrix.env.nuke_invoke }} Dxvk
