--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,10 @@ jobs:
       with:
         java-version: 11
         distribution: "temurin"
+    - name: Setup .NET 7.0
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 7.0.102
     - name: Setup .NET 6.0
       uses: actions/setup-dotnet@v1
       with:
