--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - 'main'
       - 'release/*'
+      - 'feature/selfhosted_runner'
     paths-ignore:
       - 'documentation/**'
     tags:
