--- a/src/Templates/Silk.NET.Templates/Silk.NET.Templates.csproj
+++ b/src/Templates/Silk.NET.Templates/Silk.NET.Templates.csproj
@@ -4,7 +4,7 @@
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
     <PackageType>Template</PackageType>
     <SilkDescription>A package with template projects for Silk.NET.</SilkDescription>
-    <SilkExtendedDescription>This is a quick and easy way to get started with Silk.NET. First, install the templates using `dotnet new --install Silk.NET.Templates`, and then create a project using these templates:%0a- **OpenGL (with a triangle)**: `dotnet new opengltriangle`%0a**OpenGL (blank)**: `dotnet new opengl`%0a- **Blank Window**: `dotnet new silkwindow`</SilkExtendedDescription>
+    <SilkExtendedDescription>This is a quick and easy way to get started with Silk.NET. First, install the templates using `dotnet new --install Silk.NET.Templates`, and then create a project using these templates:%0a- **OpenGL (with a triangle)**: `dotnet new silkgltriangle`%0a**OpenGL (blank)**: `dotnet new silkgl`%0a- **Blank Window**: `dotnet new silkwindow`</SilkExtendedDescription>
     <SilkSourceLinkExempt>true</SilkSourceLinkExempt>
 
     <TargetFramework>netstandard2.0</TargetFramework>
