--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,7 +11,7 @@
         <PackageVersion Include="BenchmarkDotNet" Version="0.13.3"/>
         <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="$(RoslynPackageVersion)"/>
         <PackageVersion Include="System.Text.Json" Version="6.0.5"/>
-        <PackageVersion Include="ClangSharp.PInvokeGenerator" Version="14.0.0-rc1"/>
+        <PackageVersion Include="ClangSharp.PInvokeGenerator" Version="15.0.0"/>
         <PackageVersion Include="Microsoft.Build.Locator" Version="1.4.1"/>
         <PackageVersion Include="Microsoft.Extensions.FileSystemGlobbing" Version="$(MsExtensionNugetVersion)"/>
         <PackageVersion Include="Microsoft.Build.Framework" Version="16.10.0"/>
@@ -43,7 +43,7 @@
         <PackageVersion Include="Humanizer.Core" Version="2.14.1"/>
         <PackageVersion Include="Moq" Version="4.17.2"/>
         <PackageVersion Include="System.Collections.Immutable" Version="6.0.0"/>
-        <PackageVersion Include="libclang" Version="14.0.0"/>
+        <PackageVersion Include="libclang" Version="15.0.0"/>
         <PackageVersion Include="libClangSharp" Version="15.0.0"/>
         <PackageVersion Include="Verify.Xunit" Version="17.9.0" />
         <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="$(MsExtensionNugetVersion)" />
