Install net7.0 on native lib builds

--- a/.github/workflows/angle.yml
+++ b/.github/workflows/angle.yml
@@ -52,10 +52,12 @@ jobs:
             .tmp
             ~/.nuget/packages
           key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj') }}
-      - name: Setup .NET 6.0
+      - name: Setup .NET 6.0 and .NET 7.0
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 6.0.201
+          dotnet-version: |
+            6.0.201
+            7.0.2
       - name: Build ANGLE
         run: ${{ matrix.env.nuke_invoke }} Angle
         env:
