--- a/.github/workflows/dxvk.yml
+++ b/.github/workflows/dxvk.yml
@@ -44,10 +44,12 @@ jobs:
             .tmp
             ~/.nuget/packages
           key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj') }}
-      - name: Setup .NET 6.0
+      - name: Setup .NET 6.0 and .NET 7.0
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 6.0.201
+          dotnet-version: |
+            6.0.201
+            7.0.2
       - name: Build DXVK
         uses: Joshua-Ashton/arch-mingw-github-action@12cb3126180924c3be54025b08f42e4e14da080b
         with:
