--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -18,6 +18,10 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.201
+    - name: Setup .NET 7.0
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 7.0.102
     - name: Checkout Website Branch
       run: |
         git fetch --all
