--- a/.github/workflows/public-api.yml
+++ b/.github/workflows/public-api.yml
@@ -70,10 +70,12 @@ jobs:
                       .tmp
                       ~/.nuget/packages
                   key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj') }}
-            - name: Setup .NET 6.0
+            - name: Setup .NET 6.0 and .NET 7.0
               uses: actions/setup-dotnet@v1
               with:
-                  dotnet-version: 6.0.201
+                  dotnet-version: |
+                    6.0.201
+                    7.0.*
             - name: Ship Public API
               run: ./build.sh ShipApi
               env:
