Update paths to trigger vkd3d

--- a/.github/workflows/vkd3d.yml
+++ b/.github/workflows/vkd3d.yml
@@ -8,6 +8,7 @@ on:
     paths:
       - "build/submodules/vkd3d"
       - "build/nuke/Build.Native.cs"
+      - ".github/workflows/vkd3d.yml"
 jobs:
   Build:
     strategy:
