--- a/.github/workflows/vkd3d.yml
+++ b/.github/workflows/vkd3d.yml
@@ -7,6 +7,7 @@ on:
       - "main"
     paths:
       - "build/submodules/vkd3d"
+      - "build/submodules/vkd3d-no-ms-abi.patch"
       - "build/nuke/Build.Native.cs"
       - ".github/workflows/vkd3d.yml"
 jobs:
