--- a/.github/workflows/vkd3d.yml
+++ b/.github/workflows/vkd3d.yml
@@ -21,7 +21,7 @@ jobs:
             nuke_invoke: ./build.sh
             extras: |
               sudo apt-get update
-              sudo apt-get install -y xorg-dev libvulkan-dev spirv-headers wine64-development-tools
+              sudo apt-get install -y xorg-dev libvulkan-dev spirv-headers wine64-development-tools spirv-tools
     name: ${{ matrix.env.name }} Build
     runs-on: ${{ matrix.env.os }}
     steps:
