--- a/src/Native/Silk.NET.GLFW.Native/Silk.NET.GLFW.Native.csproj
+++ b/src/Native/Silk.NET.GLFW.Native/Silk.NET.GLFW.Native.csproj
@@ -9,7 +9,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net4.6.1</TargetFrameworks>
     <PackageId>Ultz.Native.GLFW</PackageId> <!-- TODO change this in 3.0 -->
-    <PackageVersion>3.3.8</PackageVersion>
+    <PackageVersion>3.3.9</PackageVersion>
     <Authors>.NET Foundation and Contributors</Authors>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Zlib</PackageLicenseExpression>
@@ -27,6 +27,7 @@
     <Content Include="runtimes\osx-x64\native\libglfw.3.dylib" PackagePath="runtimes\osx-x64\native\libglfw.3.dylib" />
     <Content Include="runtimes\osx-arm64\native\libglfw.3.dylib" PackagePath="runtimes\osx-arm64\native\libglfw.3.dylib" />
     <Content Include="runtimes\win-x64\native\glfw3.dll" PackagePath="runtimes\win-x64\native\glfw3.dll" />
+    <Content Include="runtimes\win-arm64\native\glfw3.dll" PackagePath="runtimes\win-arm64\native\glfw3.dll" />
     <Content Include="runtimes\win-x86\native\glfw3.dll" PackagePath="runtimes\win-x86\native\glfw3.dll" />
   </ItemGroup>
 
