--- a/.github/workflows/vkd3d.yml
+++ b/.github/workflows/vkd3d.yml
@@ -22,8 +22,13 @@ jobs:
             extras: |
               sudo apt-get update 
               sudo apt-get install -y xorg-dev libvulkan-dev spirv-headers wine64-development-tools
+
               wget http://mirrors.kernel.org/ubuntu/pool/universe/s/spirv-tools/spirv-tools_2020.1-2_amd64.deb
               sudo apt install ./spirv-tools_2020.1-2_amd64.deb
+
+              wget https://ziglang.org/builds/zig-linux-x86_64-0.11.0-dev.1593+d24ebf1d1.tar.xz
+              tar -xf zig-linux-x86_64-0.11.0-dev.1593+d24ebf1d1.tar.xz
+              export PATH=$PATH:$PWD/zig-linux-x86_64-0.11.0-dev.1593+d24ebf1d1
     name: ${{ matrix.env.name }} Build
     runs-on: ${{ matrix.env.os }}
     steps:
