--- a/.github/workflows/angle.yml
+++ b/.github/workflows/angle.yml
@@ -38,7 +38,7 @@ jobs:
           token: ${{ secrets.PUSHABLE_GITHUB_TOKEN }}
       - name: Checkout submodules, configure git
         run: |
-          git -c submodule.third_party/git-hooks.update=none submodule update --init --recursive
+          git -c submodule.third_party/git-hooks.update=none submodule update --init --recursive --depth 0
           git config --local user.email "9011267+dotnet-bot@users.noreply.github.com"
           git config --local user.name "The Silk.NET Automaton" 
       - name: Extra prerequisites
