Build SPIRV-Tools native libs alongside vkd3d

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "build/submodules/vkd3d"]
 	path = build/submodules/vkd3d
 	url = https://github.com/Beyley/vkd3d
+[submodule "build/submodules/SPIRV-Tools"]
+	path = build/submodules/SPIRV-Tools
+	url = https://github.com/KhronosGroup/SPIRV-Tools
