--- a/.github/workflows/vkd3d.yml
+++ b/.github/workflows/vkd3d.yml
@@ -22,7 +22,7 @@ jobs:
             nuke_invoke: ./build.sh
             extras: |
               sudo apt-get update 
-              sudo apt-get install -y xorg-dev libvulkan-dev spirv-headers wine64-development-tools
+              sudo apt-get install -y xorg-dev libvulkan-dev spirv-headers wine64-development-tools cmake build-essential
 
               wget http://mirrors.kernel.org/ubuntu/pool/universe/s/spirv-tools/spirv-tools_2020.1-2_amd64.deb
               sudo apt install ./spirv-tools_2020.1-2_amd64.deb
@@ -34,7 +34,8 @@ jobs:
           token: ${{ secrets.PUSHABLE_GITHUB_TOKEN }}
       - name: Checkout submodules, configure git
         run: |
-          git -c submodule.third_party/git-hooks.update=none submodule update --init --recursive --depth 0
+          git submodule update --init --recursive --depth 0 build/submodules/vkd3d
+          git submodule update --init --recursive --depth 0 build/submodules/SPIRV-Tools
           git config --local user.email "9011267+dotnet-bot@users.noreply.github.com"
           git config --local user.name "The Silk.NET Automaton"
       - name: Extra prerequisites
