--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,9 @@ on:
     # all branches
     paths-ignore:
       - 'documentation/**'
+  merge_group:
+      types: [checks_requested]
+      
 jobs:
   Build:
     # This will:
