--- a/.github/workflows/wgpu.yml
+++ b/.github/workflows/wgpu.yml
@@ -35,20 +35,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
         if: runner.os == 'Windows'
         with:
-          toolchain: nightly-i686-pc-windows-msvc
-      - uses: dtolnay/rust-toolchain@nightly
-        if: runner.os == 'Windows'
-        with:
           toolchain: nightly-x86_64-pc-windows-msvc
-      - uses: dtolnay/rust-toolchain@nightly
-        if: runner.os == 'Windows'
-        with:
-          toolchain: nightly-aarch64-pc-windows-msvc
 
-      - uses: dtolnay/rust-toolchain@nightly
-        if: runner.os == 'Linux'
-        with:
-          toolchain: nightly-i686-unknown-linux-gnu
       - uses: dtolnay/rust-toolchain@nightly
         if: runner.os == 'Linux'
         with:
@@ -57,18 +45,30 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
         if: runner.os == 'macOS'
         with:
-          toolchain: nightly-aarch64-apple-darwin
-      - uses: dtolnay/rust-toolchain@nightly
-        if: runner.os == 'macOS'
-        with:
           toolchain: nightly-x86_64-apple-darwin
+
+      - name: Add targets
+        if: runner.os == 'Windows'
+        run: |
+          rustup target add i686-pc-windows-msvc
+          rustup target add aarch64-pc-windows-msvc
+
+      - name: Add targets
+        if: runner.os == 'Linux'
+        run: |
+          rustup target add i686-unknown-linux-gnu
+
+      - name: Add targets
+        if: runner.os == 'macOS'
+        run: |
+          rustup target add aarch64-apple-darwin
 
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.PUSHABLE_GITHUB_TOKEN }}
       - name: Checkout submodules, configure git
         run: |
-          git -c submodule.third_party/git-hooks.update=none submodule update --init --recursive
+          git -c submodule.third_party/git-hooks.update=none submodule update --init --recursive build/submodules/wgpu-native --depth 1
           git config --local user.email "9011267+dotnet-bot@users.noreply.github.com"
           git config --local user.name "The Silk.NET Automaton"
       - name: Extra prerequisites
