--- a/.github/workflows/wgpu.yml
+++ b/.github/workflows/wgpu.yml
@@ -79,6 +79,10 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 6.0.201
+      - name: Setup .NET 7.0.102
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 7.0.102
       - name: Build WGPU
         run: ${{ matrix.env.nuke_invoke }} Wgpu
         env:
