--- a/.github/workflows/wgpu.yml
+++ b/.github/workflows/wgpu.yml
@@ -20,7 +20,7 @@ jobs:
             nuke_invoke: ./build.sh
             extras: |
               sudo apt-get update
-              sudo apt-get install -y xorg-dev
+              sudo apt-get install -y gcc-multilib
           - os: windows-latest
             name: Windows
             nuke_invoke: ./build.cmd
