--- a/src/Native/Silk.NET.GLFW.Native/Silk.NET.GLFW.Native.csproj
+++ b/src/Native/Silk.NET.GLFW.Native/Silk.NET.GLFW.Native.csproj
@@ -9,7 +9,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net4.6.1</TargetFrameworks>
     <PackageId>Ultz.Native.GLFW</PackageId> <!-- TODO change this in 3.0 -->
-    <PackageVersion>3.3.9</PackageVersion>
+    <PackageVersion>3.3.10-alpha</PackageVersion>
     <Authors>.NET Foundation and Contributors</Authors>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Zlib</PackageLicenseExpression>
@@ -22,7 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="build\net461\$(PackageId).props" PackagePath="build\net461\$(PackageId).props" />
+    <Content Include="build\net461\$(PackageId).targets" PackagePath="build\net461\$(PackageId).targets" />
     <Content Include="runtimes\linux-x64\native\libglfw.so.3" PackagePath="runtimes\linux-x64\native\libglfw.so.3" />
     <Content Include="runtimes\osx-x64\native\libglfw.3.dylib" PackagePath="runtimes\osx-x64\native\libglfw.3.dylib" />
     <Content Include="runtimes\osx-arm64\native\libglfw.3.dylib" PackagePath="runtimes\osx-arm64\native\libglfw.3.dylib" />
