--- a/src/Native/Silk.NET.OpenAL.Soft.Native/Silk.NET.OpenAL.Soft.Native.csproj
+++ b/src/Native/Silk.NET.OpenAL.Soft.Native/Silk.NET.OpenAL.Soft.Native.csproj
@@ -8,7 +8,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net4.6.1</TargetFrameworks>
-    <PackageVersion>1.21.1.1</PackageVersion>
+    <PackageVersion>1.21.1.2</PackageVersion>
     <Authors>.NET Foundation and Contributors</Authors>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>LGPL-2.0-or-later</PackageLicenseExpression>
@@ -21,7 +21,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="build\net461\$(PackageId).props" PackagePath="build\net461\$(PackageId).props" />
+    <Content Include="build\net461\$(PackageId).targets" PackagePath="build\net461\$(PackageId).targets" />
     <Content Include="runtimes\linux-x64\native\libopenal.so" PackagePath="runtimes\linux-x64\native\libopenal.so" />
     <Content Include="runtimes\osx-x64\native\libopenal.dylib" PackagePath="runtimes\osx-x64\native\libopenal.dylib" />
     <Content Include="runtimes\win-x64\native\soft_oal.dll" PackagePath="runtimes\win-x64\native\soft_oal.dll" />
