--- a/examples/CSharp/OpenGL Tutorials/Tutorial 1.3 - Textures/Tutorial 1.3 - Textures.csproj
+++ b/examples/CSharp/OpenGL Tutorials/Tutorial 1.3 - Textures/Tutorial 1.3 - Textures.csproj
@@ -13,6 +13,7 @@
         <ProjectReference Include="..\..\..\..\src\Windowing\Silk.NET.Windowing\Silk.NET.Windowing.csproj" />-->
     </ItemGroup>
 
+    <!-- Temporary! This is just so I can load and run the project without building from source. -->
     <ItemGroup>
       <PackageReference Include="Silk.NET.Windowing" Version="2.16.0" />
       <PackageReference Include="Silk.NET.Input" Version="2.16.0" />
