--- a/examples/CSharp/OpenGL Tutorials/Tutorial 1.4 - Abstractions/Tutorial 1.4 - Abstraction.csproj
+++ b/examples/CSharp/OpenGL Tutorials/Tutorial 1.4 - Abstractions/Tutorial 1.4 - Abstraction.csproj
@@ -8,9 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\..\src\Input\Silk.NET.Input\Silk.NET.Input.csproj" />
+        <!--<ProjectReference Include="..\..\..\..\src\Input\Silk.NET.Input\Silk.NET.Input.csproj" />
         <ProjectReference Include="..\..\..\..\src\OpenGL\Silk.NET.OpenGL\Silk.NET.OpenGL.csproj" />
-        <ProjectReference Include="..\..\..\..\src\Windowing\Silk.NET.Windowing\Silk.NET.Windowing.csproj" />
+        <ProjectReference Include="..\..\..\..\src\Windowing\Silk.NET.Windowing\Silk.NET.Windowing.csproj" />-->
     </ItemGroup>
 
     <ItemGroup>
@@ -20,6 +20,17 @@
       <None Update="Shader.vert">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="silk.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+
+        <PackageReference Include="Silk.NET.Windowing" Version="2.16.0" />
+        <PackageReference Include="Silk.NET.Input" Version="2.16.0" />
+        <PackageReference Include="Silk.NET.OpenGL" Version="2.16.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="StbImageSharp" Version="2.27.13" />
     </ItemGroup>
 
 </Project>
